# llm-lama

./: .gitignore  Dockerfile  Makefile  README.md  downloader.py  pyproject.toml  requirements-dev.txt  requirements.txt  runner.py  setup.py  small_doc_qa_draft.py  update.sh  utils.py
src/: downloader.py  utils.py
